package com.bo.structuralPattern.decorator;


/**
 * @author gpb
 * 饮料接口
 */
public interface Beverage {
    // 商品描述
    public String getDescription();

    // 商品价格
    public Double getPrice();
}
